--- a/content/pt/papers.html
+++ b/content/pt/papers.html
@@ -4,8 +4,7 @@ description: "Academic research and publications about I2P anonymity network"
 layout: "papers"
 type: "papers"
 aliases:
-  - /en/papers/
-  - /papers/
+  - /pt/papers/
 ---
 
 
