--- a/static/404.html
+++ b/static/404.html
@@ -106,7 +106,7 @@
         .error-title {
             font-size: 4rem;
             font-weight: 700;
-            color: var(--color-primary);
+            color: var(--color-text);
             margin-bottom: 0.5rem;
         }
 
